--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.10"
 fastapi = {extras = ["all"], version = "^0.103.1"}
 sqlalchemy = "^2.0.20"
+python-dotenv = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
