--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
     rev: v1.2.0
     hooks:
       - id: mypy
+        additional_dependencies: ['types-PyYAML']
   - repo: https://github.com/PyCQA/flake8
     rev: 6.0.0
     hooks:
