Module 5 (end): Fixed the final unit test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 fastapi = {extras = ["all"], version = "^0.103.1"}
 sqlalchemy = "^2.0.20"
 python-dotenv = "^1.0.0"
+pyyaml = "^6.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
